2007-07-26  Andreas Kirschbaum

	* Make the main window non-resizable and center it on the screen.

	* Move HP/SP/GR/FP text display below the gauges.

	* Add tooltips for spellbelt and spelllist.

	* Increase font sizes and remove unnecessary text information.

	* Add option --server to skip the metaserver window.

	* Rename option -opengl to --opengl.

2007-07-25  Andreas Kirschbaum

	* Fix CTRL key handling when switching between applications
	with (for example) CTRL+ALT+direction key.

2007-07-24  Andreas Kirschbaum

	* Fix player and weapon speed display.

	* Implement client-side animations in map window.

2007-07-05  Andreas Kirschbaum

	* Add option -N to disable full-screen mode/enable windowed mode.

2007-07-04  Andreas Kirschbaum

	* Change skin handling from hard-coded JXCSkinPrelude class to
	config files:
	- Option -S now takes a skin name, not a class name.
	- jxclient.jar now includes the default skin. The name is
	"default". This means "java -jar jxclient.jar" works.
	- Skins now are specified through config files. The skin name is
	either a directory or a directory name under
	com/realtime/crossfire/jxclient/skins/ which can be accessed
	through the class loader.

2007-06-22  Andreas Kirschbaum

	* Implement map2 command. Remove obsolete commands map1, map1a,
	and map_scroll.

	* Fix map display issues. Implement fog-of-war and darkness
	display.

2007-06-17  Andreas Kirschbaum

	* Hide password input in login dialog box.

	* Update default key bindings.

	* Add tooltips for floor/spell/inventory object icons to display
	the object name.

2007-06-16  Andreas Kirschbaum

	* Implement repeat count for commands.

	* Implement lookat command by left-clicking in the map window.

	* Do not allow to drop locked items.

	* Make mouse bindings for mark/lock/apply/examine match the
	existing clients.

	* Maintain stable ordering of inventory objects when
	adding/removing/applying inventory objects.

2007-06-15  Andreas Kirschbaum
