@@ -1,5 +1,7 @@
 2007-07-26  Andreas Kirschbaum
 
+	* Make sure the window interior has the correct size.
+
 	* Make the main window non-resizable and center it on the screen.
 
 	* Move HP/SP/GR/FP text display below the gauges.
